[package]
name = "pokemeng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = {version = "0.16.0",  features = ["crossterm"] }
crossterm = "0.22.1 "
unicode-width = "0.1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.51"
